[gd_scene load_steps=5 format=3 uid="uid://cr2bv346s7nh6"]

[ext_resource type="Script" uid="uid://bkq3gq3gfn071" path="res://scripts/question_ui.gd" id="1_question"]
[ext_resource type="Texture2D" uid="uid://dwnshrgba2agn" path="res://assets/Q&A3.png" id="2_a3tft"]
[ext_resource type="PackedScene" uid="uid://cm806a21b6gen" path="res://scenes/option.tscn" id="3_a3tft"]

[sub_resource type="FontFile" id="FontFile_a3tft"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/96/0/ascent = 0.0
cache/0/96/0/descent = 0.0
cache/0/96/0/underline_position = 0.0
cache/0/96/0/underline_thickness = 0.0
cache/0/96/0/scale = 1.0
cache/0/121/0/ascent = 0.0
cache/0/121/0/descent = 0.0
cache/0/121/0/underline_position = 0.0
cache/0/121/0/underline_thickness = 0.0
cache/0/121/0/scale = 1.0
cache/0/146/0/ascent = 0.0
cache/0/146/0/descent = 0.0
cache/0/146/0/underline_position = 0.0
cache/0/146/0/underline_thickness = 0.0
cache/0/146/0/scale = 1.0
cache/0/171/0/ascent = 0.0
cache/0/171/0/descent = 0.0
cache/0/171/0/underline_position = 0.0
cache/0/171/0/underline_thickness = 0.0
cache/0/171/0/scale = 1.0
cache/0/196/0/ascent = 0.0
cache/0/196/0/descent = 0.0
cache/0/196/0/underline_position = 0.0
cache/0/196/0/underline_thickness = 0.0
cache/0/196/0/scale = 1.0
cache/0/221/0/ascent = 0.0
cache/0/221/0/descent = 0.0
cache/0/221/0/underline_position = 0.0
cache/0/221/0/underline_thickness = 0.0
cache/0/221/0/scale = 1.0
cache/0/251/0/ascent = 0.0
cache/0/251/0/descent = 0.0
cache/0/251/0/underline_position = 0.0
cache/0/251/0/underline_thickness = 0.0
cache/0/251/0/scale = 1.0
cache/0/301/0/ascent = 0.0
cache/0/301/0/descent = 0.0
cache/0/301/0/underline_position = 0.0
cache/0/301/0/underline_thickness = 0.0
cache/0/301/0/scale = 1.0
cache/0/346/0/ascent = 0.0
cache/0/346/0/descent = 0.0
cache/0/346/0/underline_position = 0.0
cache/0/346/0/underline_thickness = 0.0
cache/0/346/0/scale = 1.0
cache/0/411/0/ascent = 0.0
cache/0/411/0/descent = 0.0
cache/0/411/0/underline_position = 0.0
cache/0/411/0/underline_thickness = 0.0
cache/0/411/0/scale = 1.0
cache/0/486/0/ascent = 0.0
cache/0/486/0/descent = 0.0
cache/0/486/0/underline_position = 0.0
cache/0/486/0/underline_thickness = 0.0
cache/0/486/0/scale = 1.0
cache/0/491/0/ascent = 0.0
cache/0/491/0/descent = 0.0
cache/0/491/0/underline_position = 0.0
cache/0/491/0/underline_thickness = 0.0
cache/0/491/0/scale = 1.0
cache/0/506/0/ascent = 0.0
cache/0/506/0/descent = 0.0
cache/0/506/0/underline_position = 0.0
cache/0/506/0/underline_thickness = 0.0
cache/0/506/0/scale = 1.0
cache/0/541/0/ascent = 0.0
cache/0/541/0/descent = 0.0
cache/0/541/0/underline_position = 0.0
cache/0/541/0/underline_thickness = 0.0
cache/0/541/0/scale = 1.0
cache/0/556/0/ascent = 0.0
cache/0/556/0/descent = 0.0
cache/0/556/0/underline_position = 0.0
cache/0/556/0/underline_thickness = 0.0
cache/0/556/0/scale = 1.0
cache/0/561/0/ascent = 0.0
cache/0/561/0/descent = 0.0
cache/0/561/0/underline_position = 0.0
cache/0/561/0/underline_thickness = 0.0
cache/0/561/0/scale = 1.0
cache/0/566/0/ascent = 0.0
cache/0/566/0/descent = 0.0
cache/0/566/0/underline_position = 0.0
cache/0/566/0/underline_thickness = 0.0
cache/0/566/0/scale = 1.0
cache/0/571/0/ascent = 0.0
cache/0/571/0/descent = 0.0
cache/0/571/0/underline_position = 0.0
cache/0/571/0/underline_thickness = 0.0
cache/0/571/0/scale = 1.0
cache/0/576/0/ascent = 0.0
cache/0/576/0/descent = 0.0
cache/0/576/0/underline_position = 0.0
cache/0/576/0/underline_thickness = 0.0
cache/0/576/0/scale = 1.0
cache/0/581/0/ascent = 0.0
cache/0/581/0/descent = 0.0
cache/0/581/0/underline_position = 0.0
cache/0/581/0/underline_thickness = 0.0
cache/0/581/0/scale = 1.0
cache/0/586/0/ascent = 0.0
cache/0/586/0/descent = 0.0
cache/0/586/0/underline_position = 0.0
cache/0/586/0/underline_thickness = 0.0
cache/0/586/0/scale = 1.0
cache/0/591/0/ascent = 0.0
cache/0/591/0/descent = 0.0
cache/0/591/0/underline_position = 0.0
cache/0/591/0/underline_thickness = 0.0
cache/0/591/0/scale = 1.0
cache/0/596/0/ascent = 0.0
cache/0/596/0/descent = 0.0
cache/0/596/0/underline_position = 0.0
cache/0/596/0/underline_thickness = 0.0
cache/0/596/0/scale = 1.0
cache/0/536/0/ascent = 0.0
cache/0/536/0/descent = 0.0
cache/0/536/0/underline_position = 0.0
cache/0/536/0/underline_thickness = 0.0
cache/0/536/0/scale = 1.0
cache/0/526/0/ascent = 0.0
cache/0/526/0/descent = 0.0
cache/0/526/0/underline_position = 0.0
cache/0/526/0/underline_thickness = 0.0
cache/0/526/0/scale = 1.0
cache/0/516/0/ascent = 0.0
cache/0/516/0/descent = 0.0
cache/0/516/0/underline_position = 0.0
cache/0/516/0/underline_thickness = 0.0
cache/0/516/0/scale = 1.0
cache/0/441/0/ascent = 0.0
cache/0/441/0/descent = 0.0
cache/0/441/0/underline_position = 0.0
cache/0/441/0/underline_thickness = 0.0
cache/0/441/0/scale = 1.0
cache/0/416/0/ascent = 0.0
cache/0/416/0/descent = 0.0
cache/0/416/0/underline_position = 0.0
cache/0/416/0/underline_thickness = 0.0
cache/0/416/0/scale = 1.0
cache/0/391/0/ascent = 0.0
cache/0/391/0/descent = 0.0
cache/0/391/0/underline_position = 0.0
cache/0/391/0/underline_thickness = 0.0
cache/0/391/0/scale = 1.0
cache/0/376/0/ascent = 0.0
cache/0/376/0/descent = 0.0
cache/0/376/0/underline_position = 0.0
cache/0/376/0/underline_thickness = 0.0
cache/0/376/0/scale = 1.0
cache/0/356/0/ascent = 0.0
cache/0/356/0/descent = 0.0
cache/0/356/0/underline_position = 0.0
cache/0/356/0/underline_thickness = 0.0
cache/0/356/0/scale = 1.0
cache/0/336/0/ascent = 0.0
cache/0/336/0/descent = 0.0
cache/0/336/0/underline_position = 0.0
cache/0/336/0/underline_thickness = 0.0
cache/0/336/0/scale = 1.0
cache/0/331/0/ascent = 0.0
cache/0/331/0/descent = 0.0
cache/0/331/0/underline_position = 0.0
cache/0/331/0/underline_thickness = 0.0
cache/0/331/0/scale = 1.0
cache/0/326/0/ascent = 0.0
cache/0/326/0/descent = 0.0
cache/0/326/0/underline_position = 0.0
cache/0/326/0/underline_thickness = 0.0
cache/0/326/0/scale = 1.0
cache/0/321/0/ascent = 0.0
cache/0/321/0/descent = 0.0
cache/0/321/0/underline_position = 0.0
cache/0/321/0/underline_thickness = 0.0
cache/0/321/0/scale = 1.0
cache/0/311/0/ascent = 0.0
cache/0/311/0/descent = 0.0
cache/0/311/0/underline_position = 0.0
cache/0/311/0/underline_thickness = 0.0
cache/0/311/0/scale = 1.0
cache/0/306/0/ascent = 0.0
cache/0/306/0/descent = 0.0
cache/0/306/0/underline_position = 0.0
cache/0/306/0/underline_thickness = 0.0
cache/0/306/0/scale = 1.0
cache/0/281/0/ascent = 0.0
cache/0/281/0/descent = 0.0
cache/0/281/0/underline_position = 0.0
cache/0/281/0/underline_thickness = 0.0
cache/0/281/0/scale = 1.0
cache/0/271/0/ascent = 0.0
cache/0/271/0/descent = 0.0
cache/0/271/0/underline_position = 0.0
cache/0/271/0/underline_thickness = 0.0
cache/0/271/0/scale = 1.0
cache/0/261/0/ascent = 0.0
cache/0/261/0/descent = 0.0
cache/0/261/0/underline_position = 0.0
cache/0/261/0/underline_thickness = 0.0
cache/0/261/0/scale = 1.0
cache/0/241/0/ascent = 0.0
cache/0/241/0/descent = 0.0
cache/0/241/0/underline_position = 0.0
cache/0/241/0/underline_thickness = 0.0
cache/0/241/0/scale = 1.0
cache/0/236/0/ascent = 0.0
cache/0/236/0/descent = 0.0
cache/0/236/0/underline_position = 0.0
cache/0/236/0/underline_thickness = 0.0
cache/0/236/0/scale = 1.0
cache/0/231/0/ascent = 0.0
cache/0/231/0/descent = 0.0
cache/0/231/0/underline_position = 0.0
cache/0/231/0/underline_thickness = 0.0
cache/0/231/0/scale = 1.0
cache/0/226/0/ascent = 0.0
cache/0/226/0/descent = 0.0
cache/0/226/0/underline_position = 0.0
cache/0/226/0/underline_thickness = 0.0
cache/0/226/0/scale = 1.0
cache/0/216/0/ascent = 0.0
cache/0/216/0/descent = 0.0
cache/0/216/0/underline_position = 0.0
cache/0/216/0/underline_thickness = 0.0
cache/0/216/0/scale = 1.0
cache/0/211/0/ascent = 0.0
cache/0/211/0/descent = 0.0
cache/0/211/0/underline_position = 0.0
cache/0/211/0/underline_thickness = 0.0
cache/0/211/0/scale = 1.0
cache/0/206/0/ascent = 0.0
cache/0/206/0/descent = 0.0
cache/0/206/0/underline_position = 0.0
cache/0/206/0/underline_thickness = 0.0
cache/0/206/0/scale = 1.0
cache/0/201/0/ascent = 0.0
cache/0/201/0/descent = 0.0
cache/0/201/0/underline_position = 0.0
cache/0/201/0/underline_thickness = 0.0
cache/0/201/0/scale = 1.0
cache/0/176/0/ascent = 0.0
cache/0/176/0/descent = 0.0
cache/0/176/0/underline_position = 0.0
cache/0/176/0/underline_thickness = 0.0
cache/0/176/0/scale = 1.0
cache/0/161/0/ascent = 0.0
cache/0/161/0/descent = 0.0
cache/0/161/0/underline_position = 0.0
cache/0/161/0/underline_thickness = 0.0
cache/0/161/0/scale = 1.0
cache/0/106/0/ascent = 0.0
cache/0/106/0/descent = 0.0
cache/0/106/0/underline_position = 0.0
cache/0/106/0/underline_thickness = 0.0
cache/0/106/0/scale = 1.0
cache/0/101/0/ascent = 0.0
cache/0/101/0/descent = 0.0
cache/0/101/0/underline_position = 0.0
cache/0/101/0/underline_thickness = 0.0
cache/0/101/0/scale = 1.0
cache/0/86/0/ascent = 0.0
cache/0/86/0/descent = 0.0
cache/0/86/0/underline_position = 0.0
cache/0/86/0/underline_thickness = 0.0
cache/0/86/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/76/0/ascent = 0.0
cache/0/76/0/descent = 0.0
cache/0/76/0/underline_position = 0.0
cache/0/76/0/underline_thickness = 0.0
cache/0/76/0/scale = 1.0
cache/0/81/0/ascent = 0.0
cache/0/81/0/descent = 0.0
cache/0/81/0/underline_position = 0.0
cache/0/81/0/underline_thickness = 0.0
cache/0/81/0/scale = 1.0
cache/0/91/0/ascent = 0.0
cache/0/91/0/descent = 0.0
cache/0/91/0/underline_position = 0.0
cache/0/91/0/underline_thickness = 0.0
cache/0/91/0/scale = 1.0
cache/0/116/0/ascent = 0.0
cache/0/116/0/descent = 0.0
cache/0/116/0/underline_position = 0.0
cache/0/116/0/underline_thickness = 0.0
cache/0/116/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/111/0/ascent = 0.0
cache/0/111/0/descent = 0.0
cache/0/111/0/underline_position = 0.0
cache/0/111/0/underline_thickness = 0.0
cache/0/111/0/scale = 1.0
cache/0/126/0/ascent = 0.0
cache/0/126/0/descent = 0.0
cache/0/126/0/underline_position = 0.0
cache/0/126/0/underline_thickness = 0.0
cache/0/126/0/scale = 1.0
cache/0/151/0/ascent = 0.0
cache/0/151/0/descent = 0.0
cache/0/151/0/underline_position = 0.0
cache/0/151/0/underline_thickness = 0.0
cache/0/151/0/scale = 1.0
cache/0/181/0/ascent = 0.0
cache/0/181/0/descent = 0.0
cache/0/181/0/underline_position = 0.0
cache/0/181/0/underline_thickness = 0.0
cache/0/181/0/scale = 1.0
cache/0/246/0/ascent = 0.0
cache/0/246/0/descent = 0.0
cache/0/246/0/underline_position = 0.0
cache/0/246/0/underline_thickness = 0.0
cache/0/246/0/scale = 1.0
cache/0/256/0/ascent = 0.0
cache/0/256/0/descent = 0.0
cache/0/256/0/underline_position = 0.0
cache/0/256/0/underline_thickness = 0.0
cache/0/256/0/scale = 1.0
cache/0/286/0/ascent = 0.0
cache/0/286/0/descent = 0.0
cache/0/286/0/underline_position = 0.0
cache/0/286/0/underline_thickness = 0.0
cache/0/286/0/scale = 1.0
cache/0/291/0/ascent = 0.0
cache/0/291/0/descent = 0.0
cache/0/291/0/underline_position = 0.0
cache/0/291/0/underline_thickness = 0.0
cache/0/291/0/scale = 1.0
cache/0/296/0/ascent = 0.0
cache/0/296/0/descent = 0.0
cache/0/296/0/underline_position = 0.0
cache/0/296/0/underline_thickness = 0.0
cache/0/296/0/scale = 1.0
cache/0/276/0/ascent = 0.0
cache/0/276/0/descent = 0.0
cache/0/276/0/underline_position = 0.0
cache/0/276/0/underline_thickness = 0.0
cache/0/276/0/scale = 1.0
cache/0/191/0/ascent = 0.0
cache/0/191/0/descent = 0.0
cache/0/191/0/underline_position = 0.0
cache/0/191/0/underline_thickness = 0.0
cache/0/191/0/scale = 1.0
cache/0/141/0/ascent = 0.0
cache/0/141/0/descent = 0.0
cache/0/141/0/underline_position = 0.0
cache/0/141/0/underline_thickness = 0.0
cache/0/141/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/59/0/ascent = 0.0
cache/0/59/0/descent = 0.0
cache/0/59/0/underline_position = 0.0
cache/0/59/0/underline_thickness = 0.0
cache/0/59/0/scale = 1.0
cache/0/74/0/ascent = 0.0
cache/0/74/0/descent = 0.0
cache/0/74/0/underline_position = 0.0
cache/0/74/0/underline_thickness = 0.0
cache/0/74/0/scale = 1.0
cache/0/79/0/ascent = 0.0
cache/0/79/0/descent = 0.0
cache/0/79/0/underline_position = 0.0
cache/0/79/0/underline_thickness = 0.0
cache/0/79/0/scale = 1.0
cache/0/84/0/ascent = 0.0
cache/0/84/0/descent = 0.0
cache/0/84/0/underline_position = 0.0
cache/0/84/0/underline_thickness = 0.0
cache/0/84/0/scale = 1.0
cache/0/89/0/ascent = 0.0
cache/0/89/0/descent = 0.0
cache/0/89/0/underline_position = 0.0
cache/0/89/0/underline_thickness = 0.0
cache/0/89/0/scale = 1.0
cache/0/109/0/ascent = 0.0
cache/0/109/0/descent = 0.0
cache/0/109/0/underline_position = 0.0
cache/0/109/0/underline_thickness = 0.0
cache/0/109/0/scale = 1.0
cache/0/114/0/ascent = 0.0
cache/0/114/0/descent = 0.0
cache/0/114/0/underline_position = 0.0
cache/0/114/0/underline_thickness = 0.0
cache/0/114/0/scale = 1.0
cache/0/134/0/ascent = 0.0
cache/0/134/0/descent = 0.0
cache/0/134/0/underline_position = 0.0
cache/0/134/0/underline_thickness = 0.0
cache/0/134/0/scale = 1.0
cache/0/139/0/ascent = 0.0
cache/0/139/0/descent = 0.0
cache/0/139/0/underline_position = 0.0
cache/0/139/0/underline_thickness = 0.0
cache/0/139/0/scale = 1.0
cache/0/149/0/ascent = 0.0
cache/0/149/0/descent = 0.0
cache/0/149/0/underline_position = 0.0
cache/0/149/0/underline_thickness = 0.0
cache/0/149/0/scale = 1.0
cache/0/164/0/ascent = 0.0
cache/0/164/0/descent = 0.0
cache/0/164/0/underline_position = 0.0
cache/0/164/0/underline_thickness = 0.0
cache/0/164/0/scale = 1.0
cache/0/169/0/ascent = 0.0
cache/0/169/0/descent = 0.0
cache/0/169/0/underline_position = 0.0
cache/0/169/0/underline_thickness = 0.0
cache/0/169/0/scale = 1.0
cache/0/179/0/ascent = 0.0
cache/0/179/0/descent = 0.0
cache/0/179/0/underline_position = 0.0
cache/0/179/0/underline_thickness = 0.0
cache/0/179/0/scale = 1.0
cache/0/184/0/ascent = 0.0
cache/0/184/0/descent = 0.0
cache/0/184/0/underline_position = 0.0
cache/0/184/0/underline_thickness = 0.0
cache/0/184/0/scale = 1.0
cache/0/159/0/ascent = 0.0
cache/0/159/0/descent = 0.0
cache/0/159/0/underline_position = 0.0
cache/0/159/0/underline_thickness = 0.0
cache/0/159/0/scale = 1.0
cache/0/154/0/ascent = 0.0
cache/0/154/0/descent = 0.0
cache/0/154/0/underline_position = 0.0
cache/0/154/0/underline_thickness = 0.0
cache/0/154/0/scale = 1.0
cache/0/144/0/ascent = 0.0
cache/0/144/0/descent = 0.0
cache/0/144/0/underline_position = 0.0
cache/0/144/0/underline_thickness = 0.0
cache/0/144/0/scale = 1.0
cache/0/129/0/ascent = 0.0
cache/0/129/0/descent = 0.0
cache/0/129/0/underline_position = 0.0
cache/0/129/0/underline_thickness = 0.0
cache/0/129/0/scale = 1.0
cache/0/124/0/ascent = 0.0
cache/0/124/0/descent = 0.0
cache/0/124/0/underline_position = 0.0
cache/0/124/0/underline_thickness = 0.0
cache/0/124/0/scale = 1.0
cache/0/104/0/ascent = 0.0
cache/0/104/0/descent = 0.0
cache/0/104/0/underline_position = 0.0
cache/0/104/0/underline_thickness = 0.0
cache/0/104/0/scale = 1.0
cache/0/99/0/ascent = 0.0
cache/0/99/0/descent = 0.0
cache/0/99/0/underline_position = 0.0
cache/0/99/0/underline_thickness = 0.0
cache/0/99/0/scale = 1.0
cache/0/94/0/ascent = 0.0
cache/0/94/0/descent = 0.0
cache/0/94/0/underline_position = 0.0
cache/0/94/0/underline_thickness = 0.0
cache/0/94/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/54/0/ascent = 0.0
cache/0/54/0/descent = 0.0
cache/0/54/0/underline_position = 0.0
cache/0/54/0/underline_thickness = 0.0
cache/0/54/0/scale = 1.0
cache/0/49/0/ascent = 0.0
cache/0/49/0/descent = 0.0
cache/0/49/0/underline_position = 0.0
cache/0/49/0/underline_thickness = 0.0
cache/0/49/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[node name="QuestionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_question")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.920001)

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 2
offset_left = 3.0
offset_top = -4.0
offset_right = 599.0
offset_bottom = 399.0
texture = ExtResource("2_a3tft")

[node name="QuestionLabel" type="Label" parent="Panel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
offset_left = 96.0
offset_top = 27.0
offset_right = 643.0
offset_bottom = 181.0
scale = Vector2(0.826087, 0.826087)
theme_override_colors/font_color = Color(0.942823, 0.942823, 0.942823, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontFile_a3tft")
theme_override_font_sizes/font_size = 30
text = "Quel humoriste a popularisé le personnage 'Kévin' ?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="TimerBar" type="ProgressBar" parent="Panel"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_left = 136.739
offset_top = 358.608
offset_right = 308.739
offset_bottom = 375.608
rotation = -1.5708
scale = Vector2(1, 0.782609)
value = 100.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = -440.0
offset_top = 166.304
offset_right = 120.0
offset_bottom = 189.304
text = "5"
horizontal_alignment = 1

[node name="OptionA" parent="Panel" instance=ExtResource("3_a3tft")]
layout_mode = 0
offset_left = 238.0
offset_top = 195.652
offset_right = 361.0
offset_bottom = 226.652

[node name="OptionB" parent="Panel" instance=ExtResource("3_a3tft")]
layout_mode = 0
offset_left = 239.0
offset_top = 258.695
offset_right = 410.115
offset_bottom = 289.695

[node name="OptionC" parent="Panel" instance=ExtResource("3_a3tft")]
layout_mode = 0
offset_left = 240.0
offset_top = 322.826
offset_right = 411.115
offset_bottom = 353.826
